[package]
name = "abc337"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "c"
path = "src/c.rs"

[[bin]]
name = "d"
path = "src/d.rs"

[[bin]]
name = "e"
path = "src/e.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
petgraph = "0.6.4"
proconio = { version = "0.4.3", features = ["derive"] }
superslice = "1.0.0"
